src/test/deca/codegen/valid/created/affectation_indefini.deca
// Description :
//		Programme pour tester une affectation d'une variable indefinie
//
// Resultats :
//		Ok

{
int a;
int b = a;
}