src/test/deca/codegen/invalid/created/div_0.deca
// Description :
//		Programme pour tester la division par zero
//
// Resultats :
//		Erreur de compilation
//		div par zero

{
int a = 1/0;
}